Refactor game logic and improve encapsulation