@@ -1,24 +1,17 @@
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 public class Snake {
 
-private int size;
 private Direction snakeDirection;
-public ArrayList<Coordinate> body = new ArrayList<>();
+private final ArrayList<Coordinate> body = new ArrayList<>();
 
-public Snake(int size, Direction direction) {
+public Snake(Direction direction) {
     Coordinate firstCoordinate = new Coordinate(200, 150);
-body.add(firstCoordinate);
-    this.size = size;
+    body.add(firstCoordinate);
     this.snakeDirection = direction;
 }
-
-    public int getHeadPositionX() {
-    return this.body.getFirst().x;}
-
-    public int getHeadPositionY() {
-        return  this.body.getFirst().y;
-    }
     public Direction getDirection() {
     return snakeDirection;
     }
@@ -27,51 +20,33 @@ body.add(firstCoordinate);
     this.snakeDirection = snakeDirection;
     }
 
-    public void setSize(int size) {
-    this.size = size;
-    }
-    public int getSize() {
-    return this.size;
+    public List<Coordinate> getBody() {
+        return Collections.unmodifiableList(body);
     }
 
     public void grow(){
         Coordinate tail = body.getLast();
-        body.add(new Coordinate(tail.x, tail.y));
-        setSize(getSize() + 1);
+        body.add(new Coordinate(tail.getX(), tail.getY()));
     }
 
-    public void move(){
-        if (getDirection() == Direction.EAST) {
-            for (int i = body.size() - 1; i > 0; i--) {
-                body.get(i).x = body.get(i - 1).x;
-                body.get(i).y = body.get(i - 1).y;
-            }
-            body.getFirst().x = getHeadPositionX() + 10;
-            body.getFirst().y = getHeadPositionY();
-        } else if (getDirection() == Direction.SOUTH) {
-            for (int i = body.size() - 1; i > 0; i--) {
-                body.get(i).x = body.get(i - 1).x;
-                body.get(i).y = body.get(i - 1).y;
-            }
-            body.getFirst().x = getHeadPositionX();
-            body.getFirst().y = getHeadPositionY() + 10;
+    public void move() {
+        // Move body segments
+        for (int i = body.size() - 1; i > 0; i--) {
+            Coordinate prev = body.get(i - 1);
+            Coordinate curr = body.get(i);
+            curr.setX(prev.getX());
+            curr.setY(prev.getY());
         }
-        else if (getDirection() == Direction.NORTH) {
-            for (int i = body.size() - 1; i > 0; i--) {
-                body.get(i).x = body.get(i - 1).x;
-                body.get(i).y = body.get(i - 1).y;
-            }
-            body.getFirst().x = getHeadPositionX();
-            body.getFirst().y = getHeadPositionY() - 10;
-        }
-        else if (getDirection() == Direction.WEST) {
-            for (int i = body.size() - 1; i > 0; i--) {
-                body.get(i).x = body.get(i - 1).x;
-                body.get(i).y = body.get(i - 1).y;
-            }
-            body.getFirst().x = getHeadPositionX() - 10;
-            body.getFirst().y = getHeadPositionY();
+
+        // Move head
+        Coordinate head = body.get(0);
+        switch (snakeDirection) {
+            case EAST -> head.setX(head.getX() + 10);
+            case WEST -> head.setX(head.getX() - 10);
+            case SOUTH -> head.setY(head.getY() + 10);
+            case NORTH -> head.setY(head.getY() - 10);
         }
     }
+
 }
 
